--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,9 @@
                         <a class="nav-link" href="#new_paper">Yeni Haberler</a>
                     </li>
 
+                </ul>
+                
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mr-3">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -71,10 +74,14 @@
                     </li>
                 </ul>
 
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mr-5">
+                    <li class="nav-item ">
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </li>
+                    </ul>
             </div>
         </div>
     </nav>
