--- a/frontend/index.html
+++ b/frontend/index.html
@@ -147,9 +147,10 @@
     <header>
         <div class="jumbotron text-white bg-dark">
             <div class="container">
-                <h1 class="display-1 text-white text-center text-uppercase" id="header_h1" name="header_h1">Blog PAge
+                <h1 class="display-1  text-center text-uppercase" id="header_h1" name="header_h1">Blog PAge
                 </h1>
-                <p class="text-capitalize text-center text-white">Blog Sayfasıza Hoş geldiniz</p>
+                <p id="header_p" name="header_p" class="text-capitalize 
+                text-center">Blog Sayfasıza Hoş geldiniz</p>
             </div>
         </div>
     </header>
