--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,9 +34,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">LOGO</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -55,10 +53,8 @@
 
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mr-3">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa fa-user"> </i>
-                            Üye
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa fa-user"> </i> Üye
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Üye Girişi</a></li>
@@ -161,7 +157,40 @@
     <!-- main start -->
 
     <!-- footer start -->
-    <footer></footer>
+    <footer>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 mt-3
+                border border-primary ">
+
+                    <address>
+                    Written by <a href="mailto:deneme@example.com">Jon Doe</a>.<br>
+                    Visit us at:<br>
+                    <br>
+                    Turkey<br>
+                    
+                    </address>
+
+                    <ul>
+                        <li>
+                            <a href="#">Facebook</a>
+                        </li>
+                        <li>
+                            <a href="#">Linkedin</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="col-md-6 mt-3 
+                border border-warning "></div>
+            </div>
+        </div>
+
+    </footer>
     <!-- footer start -->
 
 
