main left (col-md-8)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -153,17 +153,116 @@
     <!-- header start -->
 
     <!-- main start -->
-    <main></main>
+    <main class="container-fluid">
+        <div class="row">
+            <!-- sol taraf -->
+            <div class="col-md-8 mt-5">
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <h3>Header alanı</h3>
+                    </div>
+                    <img src="img/beach-gb20ac2aa8_1920.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Başlık 1</h5>
+                        <p class="card-text line-clamp4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero nemo pariatur iure sequi iste quia laudantium ut, eum cum est exercitationem molestiae, labore dolores cumque maiores odit deleniti fugiat. Culpa vero a itaque nesciunt incidunt
+                            aliquid officia earum, sunt magnam corrupti natus accusantium commodi est inventore totam vitae! Quisquam dolorum consectetur veniam magni, quo veritatis porro ipsam. Quidem, est? Fugiat blanditiis sequi nisi? Harum fuga impedit,
+                            expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde tempora rem nihil dolore
+                            laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
+                        </p>
+                        <button class="btn btn-primary">Detay ...</button>
+                    </div>
+                    <div class="card-footer"> 13 Mart 2022</div>
+                </div>
+
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <h3>Header alanı</h3>
+                    </div>
+                    <img src="img/seashells-g57d230491_1920.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Başlık 1</h5>
+                        <p class="card-text line-clamp4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero nemo pariatur iure sequi iste quia laudantium ut, eum cum est exercitationem molestiae, labore dolores cumque maiores odit deleniti fugiat. Culpa vero a itaque nesciunt incidunt
+                            aliquid officia earum, sunt magnam corrupti natus accusantium commodi est inventore totam vitae! Quisquam dolorum consectetur veniam magni, quo veritatis porro ipsam. Quidem, est? Fugiat blanditiis sequi nisi? Harum fuga impedit,
+                            expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde tempora rem nihil dolore
+                            laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
+                        </p>
+                        <button class="btn btn-primary">Detay ...</button>
+                    </div>
+                    <div class="card-footer"> 13 Mart 2022</div>
+                </div>
+
+
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <h3>Header alanı</h3>
+                    </div>
+                    <img src="img/beach-g78273bab5_1920.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Başlık 1</h5>
+                        <p class="card-text line-clamp4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero nemo pariatur iure sequi iste quia laudantium ut, eum cum est exercitationem molestiae, labore dolores cumque maiores odit deleniti fugiat. Culpa vero a itaque nesciunt incidunt
+                            aliquid officia earum, sunt magnam corrupti natus accusantium commodi est inventore totam vitae! Quisquam dolorum consectetur veniam magni, quo veritatis porro ipsam. Quidem, est? Fugiat blanditiis sequi nisi? Harum fuga impedit,
+                            expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde tempora rem nihil dolore
+                            laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
+                        </p>
+                        <button class="btn btn-primary">Detay ...</button>
+                    </div>
+                    <div class="card-footer"> 13 Mart 2022</div>
+                </div>
+
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <h3>Header alanı</h3>
+                    </div>
+                    <img src="img/beach-gb20ac2aa8_1920.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Başlık 1</h5>
+                        <p class="card-text line-clamp4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero nemo pariatur iure sequi iste quia laudantium ut, eum cum est exercitationem molestiae, labore dolores cumque maiores odit deleniti fugiat. Culpa vero a itaque nesciunt incidunt
+                            aliquid officia earum, sunt magnam corrupti natus accusantium commodi est inventore totam vitae! Quisquam dolorum consectetur veniam magni, quo veritatis porro ipsam. Quidem, est? Fugiat blanditiis sequi nisi? Harum fuga impedit,
+                            expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde tempora rem nihil dolore
+                            laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
+                        </p>
+                        <button class="btn btn-primary">Detay ...</button>
+                    </div>
+                    <div class="card-footer"> 13 Mart 2022</div>
+                </div>
+
+
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <h3>Header alanı</h3>
+                    </div>
+                    <img src="img/stork-g97b435812_1920.jpg" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Başlık 1</h5>
+                        <p class="card-text line-clamp4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero nemo pariatur iure sequi iste quia laudantium ut, eum cum est exercitationem molestiae, labore dolores cumque maiores odit deleniti fugiat. Culpa vero a itaque nesciunt incidunt
+                            aliquid officia earum, sunt magnam corrupti natus accusantium commodi est inventore totam vitae! Quisquam dolorum consectetur veniam magni, quo veritatis porro ipsam. Quidem, est? Fugiat blanditiis sequi nisi? Harum fuga impedit,
+                            expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde tempora rem nihil dolore
+                            laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
+                        </p>
+                        <button class="btn btn-primary">Detay ...</button>
+                    </div>
+                    <div class="card-footer">
+                        13 Mart 2022
+                    </div>
+                </div>
+            </div>
+            <!-- sağ taraf -->
+            <div class="col-md-4 mt-5">sağ taraf</div>
+
+    </main>
     <!-- main start -->
 
     <!-- footer start -->
     <footer>
-
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-3
                 border border-primary ">
-
                     <address>
                     Written by <a href="mailto:deneme@example.com">Jon Doe</a>.<br>
                     Visit us at:<br>
@@ -192,9 +291,6 @@
 
     </footer>
     <!-- footer start -->
-
-
-
 
     <!-- ends codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
