--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,6 @@
     <!-- external css -->
     <link rel="stylesheet" href="style.css">
 
-
-
     <!-- Jquery ui  css and js    -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -178,6 +176,16 @@
                                     tempora rem nihil dolore laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
                                 </p>
                                 <button class="btn btn-primary">Detay ...</button>
+                                <div class="card_tag">
+                                    <a href="#">#html5</a>
+                                    <a href="#">#semantic</a>
+                                    <a href="#">#console</a>
+                                    <a href="#">#css3</a>
+                                    <a href="#">#jquery</a>
+                                    <a href="#">#hide</a>
+                                    <a href="#">#show</a>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -201,6 +209,15 @@
                                     tempora rem nihil dolore laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
                                 </p>
                                 <button class="btn btn-primary">Detay ...</button>
+                                <div class="card_tag">
+                                    <a href="#">#html5</a>
+                                    <a href="#">#semantic</a>
+                                    <a href="#">#console</a>
+                                    <a href="#">#css3</a>
+                                    <a href="#">#jquery</a>
+                                    <a href="#">#hide</a>
+                                    <a href="#">#show</a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -230,6 +247,15 @@
                                     tempora rem nihil dolore laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
                                 </p>
                                 <button class="btn btn-primary">Detay ...</button>
+                                <div class="card_tag">
+                                    <a href="#">#html5</a>
+                                    <a href="#">#semantic</a>
+                                    <a href="#">#console</a>
+                                    <a href="#">#css3</a>
+                                    <a href="#">#jquery</a>
+                                    <a href="#">#hide</a>
+                                    <a href="#">#show</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -255,6 +281,15 @@
                                     tempora rem nihil dolore laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
                                 </p>
                                 <button class="btn btn-primary">Detay ...</button>
+                                <div class="card_tag">
+                                    <a href="#">#html5</a>
+                                    <a href="#">#semantic</a>
+                                    <a href="#">#console</a>
+                                    <a href="#">#css3</a>
+                                    <a href="#">#jquery</a>
+                                    <a href="#">#hide</a>
+                                    <a href="#">#show</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -262,29 +297,86 @@
                     <div class="card-footer"> 13 Mart 2022</div>
                 </div>
 
-
                 <div class="card mb-5">
                     <div class="card-header">
                         <h3>Header alanı</h3>
                     </div>
-                    <img src="img/stork-g97b435812_1920.jpg" alt="" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Başlık 1</h5>
-                        <p class="card-text line-clamp10">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero nemo pariatur iure sequi iste quia laudantium ut, eum cum est exercitationem molestiae, labore dolores cumque maiores odit deleniti fugiat. Culpa vero a itaque nesciunt incidunt
-                            aliquid officia earum, sunt magnam corrupti natus accusantium commodi est inventore totam vitae! Quisquam dolorum consectetur veniam magni, quo veritatis porro ipsam. Quidem, est? Fugiat blanditiis sequi nisi? Harum fuga impedit,
-                            expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde tempora rem nihil dolore
-                            laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
-                        </p>
-                        <button class="btn btn-primary">Detay ...</button>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <img src="img/beach-g78273bab5_1920.jpg" alt="" class="card-img-top">
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Başlık 1</h5>
+                                <p class="card-text line-clamp10">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus libero nemo pariatur iure sequi iste quia laudantium ut, eum cum est exercitationem molestiae, labore dolores cumque maiores odit deleniti fugiat. Culpa vero a itaque nesciunt incidunt
+                                    aliquid officia earum, sunt magnam corrupti natus accusantium commodi est inventore totam vitae! Quisquam dolorum consectetur veniam magni, quo veritatis porro ipsam. Quidem, est? Fugiat blanditiis sequi nisi? Harum
+                                    fuga impedit, expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde
+                                    tempora rem nihil dolore laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
+                                </p>
+                                <button class="btn btn-primary">Detay ...</button>
+                                <div class="card_tag">
+                                    <a href="#">#html5</a>
+                                    <a href="#">#semantic</a>
+                                    <a href="#">#console</a>
+                                    <a href="#">#css3</a>
+                                    <a href="#">#jquery</a>
+                                    <a href="#">#hide</a>
+                                    <a href="#">#show</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        13 Mart 2022
-                    </div>
+                    <div class="card-footer"> 13 Mart 2022</div>
                 </div>
             </div>
+
             <!-- sağ taraf -->
-            <div class="col-md-3 mt-5">sağ taraf</div>
+            <div class="col-md-3 mt-5">
+
+                <!-- search -->
+                <div class="card ">
+                    <div class="card-body mb-4 mt-2">
+                        <h4 class="card-title">Search</h4>
+                        <input type="text" class="form-control" placeholder="Search ....">
+                    </div>
+                </div>
+
+                <!-- en çok ziyaret edilenler -->
+                <div class="card mt-5 mb-5">
+                    <div class="card-header">
+                        <h5 class="text-center text-muted text-capitalize">en çok ziyaret edilenler</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <ul>
+                                        <li>
+                                            <a href="#">html5 Lorem, ipsum dolor.</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">css3 Lorem, ipsum dolor. </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">js Lorem, ipsum dolor.</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Bootstrap Lorem, ipsum dolor.</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Toplam:55
+                    </div>
+                </div>
+
+
+
+            </div>
 
     </main>
     <!-- main start -->
@@ -296,11 +388,11 @@
                 <div class="col-md-6 mt-3
                 border border-primary ">
                     <address>
-                    Written by <a href="mailto:deneme@example.com">Jon Doe</a>.<br>
-                    Visit us at:<br>
-                    <br>
-                    Turkey<br>
-                    
+                        Written by <a href="mailto:deneme@example.com">Jon Doe</a>.<br>
+                        Visit us at:<br>
+                        <br>
+                        Turkey<br>
+
                     </address>
 
                     <ul>
