--- a/frontend/index.html
+++ b/frontend/index.html
@@ -175,7 +175,7 @@
                                     fuga impedit, expedita unde consequuntur quisquam. Ea dolore aperiam asperiores ipsam numquam, sunt, recusandae, voluptatibus repellat quam mollitia rem cumque velit ullam at voluptatum magni. Quisquam odit vitae unde
                                     tempora rem nihil dolore laudantium sequi a, eius reiciendis vero iure soluta, obcaecati ducimus accusantium dolorum asperiores consequatur aperiam eum veniam esse mollitia facilis. Neque, recusandae.
                                 </p>
-                                <button class="btn btn-primary">Detay ...</button>
+                                <button class="btn btn-primary mb-3">Detay ...</button>
                                 <div class="card_tag">
                                     <a href="#">#html5</a>
                                     <a href="#">#semantic</a>
