--- a/frontend/index.html
+++ b/frontend/index.html
@@ -333,7 +333,6 @@
 
             <!-- sağ taraf -->
             <div class="col-md-3 mt-5">
-
                 <!-- search -->
                 <div class="card ">
                     <div class="card-body mb-4 mt-2">
@@ -374,12 +373,81 @@
                     </div>
                 </div>
 
+                <!-- tag cloud -->
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="text-center text-muted text-capitalize">Tag Cloud</h5>
+                    </div>
+                    <div class="card-body tagcloud">
+                        <a href="#" class="card-link">html5</a>
+                        <a href="#" class="card-link">css3</a>
+                        <a href="#" class="card-link">javase</a>
+                        <a href="#" class="card-link">jsp</a>
+                        <a href="#" class="card-link">jsf</a>
+                        <a href="#" class="card-link">servlet</a>
+                        <a href="#" class="card-link">spring boot</a>
+                        <a href="#" class="card-link">spring data</a>
+                        <a href="#" class="card-link">spring security</a>
+                        <a href="#" class="card-link">spring data</a>
+                        <a href="#" class="card-link">html5</a>
+                        <a href="#" class="card-link">css3</a>
+                        <a href="#" class="card-link">javase</a>
+                        <a href="#" class="card-link">jsp</a>
+                        <a href="#" class="card-link">jsf</a>
+                        <a href="#" class="card-link">servlet</a>
+                        <a href="#" class="card-link">spring boot</a>
+                        <a href="#" class="card-link">spring data</a>
+                        <a href="#" class="card-link">spring security</a>
+                        <a href="#" class="card-link">spring data</a>
+                    </div>
+                </div>
 
+                <!-- image galery -->
+                <div class="card mt-5">
+                    <div class="card-header">
+                        <h5 class="text-center text-muted text-capitalize">Resim Galerisi</h5>
+                    </div>
+
+                    <div id="carouselId" class="carousel slide image_galery" data-bs-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active"></li>
+                            <li data-bs-target="#carouselId" data-bs-slide-to="1"></li>
+                            <li data-bs-target="#carouselId" data-bs-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img src="img/beach-g78273bab5_1920.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/seashells-g57d230491_1920.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/beach-gb20ac2aa8_1920.jpg" alt="Third slide">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                          </button>
+                    </div>
+
+
+
+
+
+
+
+                </div>
 
             </div>
 
     </main>
     <!-- main start -->
+
 
     <!-- footer start -->
     <footer>
